--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,5 @@
 {
-    "apiBaseUrl": "http://192.168.0.21:5581",
-    "webSocketUrl": "ws://192.168.0.21:5581/OpenVpnServer/status-stream",
+    "apiBaseUrl": "http://192.168.0.21:5581/api",
+    "webSocketUrl": "ws://192.168.0.21:5581/api/OpenVpnServer/status-stream",
     "defaultRefreshInterval": 60
-  }
-  
+}
