fix problem with load data when program try to connect ws for serviceStatus

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 5582;
-    server_name localhost;
+    server_name http://192.168.0.21;
 
     root /usr/share/nginx/html;
     index index.html;
