--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,5 @@
 {
-    "apiBaseUrl": "http://localhost:5581/api",
-    "webSocketUrl": "ws://localhost:5581/api/OpenVpnServers/status-stream",
+    "apiBaseUrl": "http://192.168.0.21:5581/api",
+    "webSocketUrl": "ws://192.168.0.21:5581/api/OpenVpnServers/status-stream",
     "defaultRefreshInterval": 60
 } 
