--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 5582;
-    server_name http://localhost;
+    server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
