--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,5 @@
 server {
     listen 5582;
-    server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -10,9 +9,16 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:80/;
+        proxy_pass http://backend:5581/;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_page 404 /index.html;
