--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.16",
+    "@types/react-toastify": "^4.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.5"
