--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-vpn-gate-monitor-frontend",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -31,8 +31,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts start",
+    "build": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -60,6 +60,7 @@
     "@types/leaflet": "^1.9.16",
     "@types/react-toastify": "^4.1.0",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.5"
   }
