--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5581",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -58,7 +59,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.16",
-    "@types/react-toastify": "^4.1.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "postcss": "^8.5.1",
