--- a/nginx.conf
+++ b/nginx.conf
@@ -9,16 +9,17 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:5581/;
-
+        proxy_pass http://backend:5581;
         proxy_http_version 1.1;
+
+        # 👇 обязательно для WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     error_page 404 /index.html;
