--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,15 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-        "type": "chrome",
-        "request": "launch",
-        "name": "Debug React App",
-        "url": "http://localhost:5582",
-        "webRoot": "${workspaceFolder}/src",
-        "sourceMaps": true,
-        "preLaunchTask": "npm: start",
-        "browserLaunchLocation": "reuse",
-        "smartStep": true,
-        "skipFiles": ["<node_internals>/**"],
-        "trace": true
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Vite Dev Server",
+      "type": "pwa-node",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "dev"],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    }
+  ]
 }
