--- a/package.json
+++ b/package.json
@@ -1,67 +1,44 @@
 {
-  "name": "open-vpn-gate-monitor-frontend",
-  "version": "0.1.1.17",
+  "name": "open-vpn-gate-monitor-frontend-vite",
   "private": true,
+  "version": "0.1.1.17",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@microsoft/signalr": "^8.0.7",
-    "@mui/material": "^6.4.2",
-    "@mui/x-data-grid": "^7.25.0",
-    "@tanstack/react-table": "^8.20.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.125",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "axios": "^1.7.9",
+    "@mui/material": "^7.1.0",
+    "@mui/x-data-grid": "^8.4.0",
+    "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "moment": "^2.30.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0",
-    "react-leaflet": "^4.2.1",
-    "react-router-dom": "^7.1.4",
-    "react-scripts": "^3.0.1",
-    "react-toastify": "^11.0.5",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "cross-env REACT_APP_VERSION=$npm_package_version REACT_APP_PROXY_TARGET=http://localhost:5581 react-scripts start",
-    "build": "cross-env REACT_APP_VERSION=$npm_package_version react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/js-cookie": "^3.0.6",
-    "@types/leaflet": "^1.9.16",
-    "autoprefixer": "^10.4.20",
-    "cross-env": "^7.0.3",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.5"
+    "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.18",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
   }
 }
